--- a/app/translations/ru/LC_MESSAGES/messages.po
+++ b/app/translations/ru/LC_MESSAGES/messages.po
@@ -7,38 +7,50 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-03-01 22:52+0300\n"
+"POT-Creation-Date: 2015-03-02 02:09+0300\n"
 "PO-Revision-Date: 2015-03-01 23:01+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: ru <LL@li.org>\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
-"X-Generator: Poedit 1.5.4\n"
 
 #: app/templates/index.html:21
+msgid "ru"
+msgstr "en"
+
+#: app/templates/index.html:21
+msgid "asd"
+msgstr "русский"
+
+#: app/templates/index.html:21
+msgid "asdf"
+msgstr "english"
+
+#: app/templates/index.html:25
 msgid "Log in"
 msgstr "Зайти в систему"
 
-#: app/templates/index.html:23
+#: app/templates/index.html:27
 msgid "Admin Page"
 msgstr "Админка"
 
-#: app/templates/index.html:24
+#: app/templates/index.html:28
 msgid "Log out"
 msgstr "Выйти из системы"
 
-#: app/templates/index.html:43
+#: app/templates/index.html:47
 msgid "Dates"
 msgstr "Важные даты"
 
-#: app/templates/index.html:52
+#: app/templates/index.html:56
 msgid "News"
 msgstr "Свежие новости"
 
 #: app/templates/main.html:4
 msgid "Content"
 msgstr "Информация"
+
