--- a/app/translations/ru/LC_MESSAGES/messages.po
+++ b/app/translations/ru/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-03-31 10:06+0300\n"
+"POT-Creation-Date: 2015-04-01 11:52+0300\n"
 "PO-Revision-Date: 2015-03-01 23:01+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: ru <LL@li.org>\n"
@@ -18,13 +18,30 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
 
-#: app/templates/header.html:3 app/templates/save.html:7
+#: app/templates/header.html:5
+msgid "Ershov Informatics conference"
+msgstr "Конференция имени А.П. Ершова"
+
+#: app/templates/header.html:10
 msgid "ru"
 msgstr "en"
 
-#: app/templates/header.html:6
-msgid "Ershov Informatics conference"
-msgstr "Конференция имени А.П. Ершова"
+#: app/templates/main.html:18
+msgid "Dates"
+msgstr "Важные даты"
+
+#: app/templates/main.html:32
+msgid "News"
+msgstr "Свежие новости"
+
+#: app/templates/main.html:51 app/templates/menu-old.html:51
+#: app/templates/speakers.html:4
+msgid "Keynote Speakers"
+msgstr "Основные докладчики"
+
+#: app/templates/main.html:72
+msgid "Materials"
+msgstr "Материалы"
 
 #: app/templates/menu-old.html:19
 msgid "Welcome"
@@ -42,10 +59,6 @@ msgstr "Фотографии"
 msgid "Programme"
 msgstr "Программа конференции"
 
-#: app/templates/menu-old.html:51 app/templates/speakers.html:4
-msgid "Keynote Speakers"
-msgstr "Основные докладчики"
-
 #: app/templates/menu-old.html:52
 msgid "Call for Papers (PDF)"
 msgstr "Информационное письмо (PDF)"
@@ -53,14 +66,6 @@ msgstr "Информационное письмо (PDF)"
 #: app/templates/menu-old.html:68
 msgid "Previous PSI Editions"
 msgstr "Предыдущие конференции PSI"
-
-#: app/templates/save.html:25
-msgid "Dates"
-msgstr "Важные даты"
-
-#: app/templates/save.html:38
-msgid "News"
-msgstr "Свежие новости"
 
 #~ msgid "asd"
 #~ msgstr "русский"
